[gd_scene load_steps=4 format=3 uid="uid://btktvntxtuyxm"]

[ext_resource type="Script" uid="uid://bawag4o6gr4eu" path="res://ui/main_menu.gd" id="1_0dkrt"]
[ext_resource type="Theme" uid="uid://88uk406h7u3k" path="res://ui/main_theme.tres" id="1_t7e0r"]
[ext_resource type="AudioStream" uid="uid://cl24q6m3pcif5" path="res://assets/music/main_theme.wav" id="3_wk0pr"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t7e0r")
script = ExtResource("1_0dkrt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t7e0r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t7e0r")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_t7e0r")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("1_t7e0r")
text = "Rat Race"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_t7e0r")

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_t7e0r")
text = "Start"

[node name="ControlsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_t7e0r")
text = "Controls"

[node name="ControlsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t7e0r")

[node name="Panel2" type="PanelContainer" parent="ControlsContainer"]
layout_mode = 2
theme = ExtResource("1_t7e0r")

[node name="MarginContainer" type="MarginContainer" parent="ControlsContainer/Panel2"]
layout_mode = 2
theme = ExtResource("1_t7e0r")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsContainer/Panel2/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_t7e0r")

[node name="Label" type="Label" parent="ControlsContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_t7e0r")
text = "Controls"

[node name="RichTextLabel" type="RichTextLabel" parent="ControlsContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_t7e0r")
text = "Jump: Space
Movement: Arrow-Keys"
fit_content = true

[node name="ControlsExitButtonButton" type="Button" parent="ControlsContainer/Panel2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_t7e0r")
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wk0pr")
autoplay = true
